fix scrollbars

--- a/src/components/brickModal/BrickModal.module.scss
+++ b/src/components/brickModal/BrickModal.module.scss
@@ -52,11 +52,6 @@ $bootstrapPadding: 15px;
   overflow: auto;
 }
 
-.results {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .brickDetail {
   height: $bodyHeight;
   padding-top: $bootstrapPadding;
