--- a/src/components/brickModal/TagList.module.scss
+++ b/src/components/brickModal/TagList.module.scss
@@ -18,11 +18,12 @@
 $bootstrapPadding: 15px;
 
 .root {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   gap: 0.5rem;
   align-items: stretch;
   padding: $bootstrapPadding 0;
+  width: calc(100% - #{$bootstrapPadding});
   min-width: 160px;
 }
 
